deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2 
kind: Deployment 
metadata: 
  name: octankpos-deployment 
spec: 
  selector: 
    matchLabels: 
      app: octankpos 
  replicas: 2 # tells deployment to run 2 pods matching the template 
  template: 
    metadata: 
      labels: 
        app: octankpos 
    spec: 
      containers: 
      - name: octankpos 
        image: 526087338294.dkr.ecr.us-east-1.amazonaws.com/eksws-ecrdo-1w1tf8mzqoth1:latest
        ports: 
        - containerPort: 80 
---
# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service  
kind: Service 
apiVersion: v1 
metadata: 
  name: octankpos-service 
spec: 
  selector: 
    app: octankpos 
  ports: 
  - protocol: TCP 
    port: 80 
    targetPort: 80 
    nodePort: 31000 
  type: NodePort
